Добавил Хедер, подключил RTK, сделал slice темной темы

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Купи хлеб - список покупок</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="body"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
